# automatic-coding-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  conventional-commits.yml  release.yml
container/: Dockerfile  Dockerfile.alpine  IMAGE_OPTIONS.md  README.md  entrypoint-alpine.sh  entrypoint.sh
docs/: CONTAINER_IMPLEMENTATION_STATUS.md  CONTAINER_TESTING_GUIDE.md  CONTAINER_TEST_RESULTS.md  session-management.md  testing.md  usage-guide.md
docs/design/: 0-initial-design.md  1.1-architecture-overview.md  1.2-task-management.md  1.3-session-persistence.md  1.4-claude-integration.md  1.5-docker-deployment.md  1.6-configuration-security.md  cli-enhancement.md
docs/sessions/: 2025-09-18-architecture-refinement.md  2025-09-18-session-persistence-implementation.md  2025-09-18-task-management-implementation.md  2025-09-20-setup-commands-implementation.md
docs/user-guide/: intelligent-task-parsing.md
examples/: README.md  backup_strategy_test.rs  caching_strategy.txt  container_advanced.rs  container_basic.rs  default-config.toml  error_handling_demo.rs  llm_provider_example.rs  setup_commands_demo.rs  simple-tasks.toml  task_list.md  test_real_world_container.rs
examples/configurations/: README.md  default-config.toml
examples/references/: README.md  memory_leak_analysis.md
examples/task-inputs/: README.md  single_task.md  task_list.md
src/: env.rs  integration.rs  lib.rs  main.rs
src/claude/: context_manager.rs  error_recovery.rs  interface.rs  mod.rs  rate_limiter.rs  tests.rs  types.rs  usage_tracker.rs
src/cli/: args.rs  config.rs  intelligent_parser.rs  mod.rs  tasks.rs
src/container/: client.rs  config.rs  executor.rs  image.rs  interactive.rs  lifecycle.rs  mod.rs  monitor.rs  network.rs  orchestrator.rs  volume.rs
src/executor/: config.rs  container.rs  host.rs  mod.rs  resources.rs
src/llm/: claude_provider.rs  mod.rs  openai_provider.rs  provider.rs  provider_logger.rs  types.rs
src/openai/: codex_interface.rs  mod.rs  rate_limiter.rs  tests.rs  types.rs
src/session/: manager.rs  metadata.rs  mod.rs  persistence.rs  recovery.rs  tests.rs
src/task/: execution.rs  execution_plan.rs  manager.rs  mod.rs  scheduler.rs  tests.rs  tree.rs  types.rs
tests/: backup_strategy_integration.rs  claude_integration.rs  cli_functionality.rs  config_generation_integration.rs  config_toml_integration.rs  container_orchestration.rs  error_handling_integration.rs  intelligent_parser_claude.rs  intelligent_parser_integration.rs  openai_codex_integration.rs  setup_commands_integration.rs
tests/resources/: README.md
tests/resources/test1-simple-file/: task.md
tests/resources/test2-readme-creation/: task.md
tests/resources/test3-file-editing/: task.md
tests/resources/test4-multi-task/: tasks.md
tests/resources/test5-task-references/: auth_requirements.md  database_schema.md  single_task.md  tasks.md
tests/resources/test6-nested-complex-tasks/: dependencies-test.md  execplan.json  execplan2.json  main-tasks.md  payment-integration.md  search-system.md
