[package]
name = "automatic-coding-agent"
version = "0.1.0"
edition = "2024"
description = "A Rust-based agentic tool that automates coding tasks using Claude Code in headless mode"
license = "MIT"
repository = "https://github.com/automatic-coding-agent/automatic-coding-agent"
homepage = "https://github.com/automatic-coding-agent/automatic-coding-agent"
documentation = "https://docs.rs/automatic-coding-agent"
readme = "README.md"
keywords = ["ai", "automation", "coding", "agent", "claude"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Automatic Coding Agent Team"]
rust-version = "1.90.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
url = "2.4"
dashmap = "6.1"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "llm_provider_example"
path = "examples/llm_provider_example.rs"
