[package]
name = "aca"
version = "0.3.1"
edition = "2024"
description = "A Rust-based agentic tool that automates coding tasks using Claude Code and OpenAI Codex CLI integrations"
license = "MIT"
repository = "https://github.com/automatic-coding-agent/automatic-coding-agent"
homepage = "https://github.com/automatic-coding-agent/automatic-coding-agent"
documentation = "https://docs.rs/aca"
readme = "README.md"
keywords = ["ai", "automation", "coding", "agent", "llm"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Automatic Coding Agent Team"]
rust-version = "1.90.0"

[[bin]]
name = "aca"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "v5"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.4"
dashmap = "6.1"
flate2 = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.11.3"
shell-escape = "0.1.5"
which = "6.0"
bollard = "0.19.2"

[dev-dependencies]
tempfile = "3.23.0"
test-tag = "0.1"
serial_test = "3.2"
